# ferris_farm

./: Cargo.toml  LICENSE  README.md  compose.yaml
.github/workflows/: rust.yml
Articles/: ferris_farm_1.md
esp32code/hum_temp_sens/: hum_temp_sens.ino
esp32code/lux_sens/: lux_sens.ino
migrations/: 2_user.sql
src/: lib.rs  main.rs
src/http/: mod.rs  requests.rs  sensor_read.rs
src/sensors/: influx_client.rs  mod.rs  sensor.rs
src/server/: mod.rs  requests.rs
tests/: health_check.rs
